--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<canvas id="canvas"></canvas>
-<script src="js/Point.js"></script>
+<canvas id="canvas" width="800px" height="800px"></canvas>
 <script src="js/Vector.js"></script>
 <script src="js/Snake.js"></script>
+<script src="js/Point.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
