--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<canvas id="canvas" width="1000px" height="1000px"></canvas>
-<!--<div class="container">-->
-<!--    <div class="btn1"><button class = "btn">Easy</button></div>-->
-<!--    <button class = "btn">Hard</button>-->
-<!--    <button class = "btn">Hardest</button>-->
-<!--</div>-->
+<div id="container">
+<h2 id="ui">Score:</h2>
+</div>
+
 <script src="js/Vector.js"></script>
 <script src="js/Snake.js"></script>
 <script src="js/Point.js"></script>
