--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
 <div id="container">
-<h2 id="ui">Score:</h2>
+<h2 id="ui">Score:00</h2>
+</div>
+<button id="replay">
+    <i id="reset">Reset</i>
+</button>
+<div class="wrapper"></div>
+<div id="author">
+<h1>Giun</h1><span>Cầm Cập</span>
 </div>
 
 <script src="js/Vector.js"></script>
