--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body id="body">
+<!--<select name="" id="select">-->
+<!--    <option id="option1" value="1">Wall</option>-->
+<!--    <option id="option2" value="2">No Wall</option>-->
+<!--</select>-->
+<div class="button" id="button">
+    <a id="no-wall" ><span>XWall</span></a>
+    <a id="wall"><span onclick="startGame()">Wall</span></a>
+</div>
 <div id="container">
-    <button id="start" onclick="startGame()">start</button>
     <h2 id="ui">Score:00</h2>
     <div id="game-play"></div>
     <div id="author">
